# tui-llm-chat-rs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  chat.rs  events.rs  main.rs  model.rs  state.rs  ui.rs
